# fcitx5-windows

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
.github/workflows/: ci.yml
contrib/fcitx5/: profile.pinyin-only.example  profile.pinyin.example  profile.windows.example
docs/: PINYIN_WINDOWS.md
installer/: Fcitx5Tsf.iss  README.txt  build-installer.ps1
patches/: _wc_patched.cmake  _wc_upstream.cmake  fcitx5-chinese-addons-msys2-clang-libcxx.patch  fcitx5-lua-loader-bisect-core-groups.patch  fcitx5-lua-loader-deep-trace.patch  fcitx5-lua-loader-force-visible-fallback.patch  fcitx5-lua-loader-min-anchor-trace.patch  fcitx5-lua-loader-minimal-core-register.patch  fcitx5-lua-loader-trace.patch  fcitx5-lua-mingw-objdump-resolve.patch  fcitx5-lua-windows-no-newnamespace.patch  fcitx5-rime-windows-path-utf8.patch  gen-windows-cross-patch.py  libime-windows-model-dirs.patch  librime-msys2-clang-windres-rc.patch  windows-cross-msys2-toolchain-arm64-llvm-windres.patch
scripts/: 01-build-fcitx5-windows.ps1  02-build-deps.ps1  02-build-deps.sh  03-build-installer.ps1  04-deploy-to-portable.ps1  05-register-ime.ps1  Fcitx5-Ime.Common.ps1  _compile-build-portable.ps1  build-msys-full.sh  build-pinyin-stage.sh  build-win32-msvc.bat  deploy-build-to-portable.ps1  deploy-ime-stage.ps1  deploy-ime-stage.sh  enable-fcitx-ts-log.ps1  find-fcitx5-bin-lock.ps1  install-fcitx5-ime.ps1  install-fcitx5-ime.sh  open-fcitx5-user-config.ps1  prepare-deps.sh  prepare-pinyin-deps.sh  reset-fcitx5-config-appdata.ps1  scan-fcitx5-hkcu-residual.ps1  set-fcitx-ts-disable-rime.ps1  test-ime-pipe.ps1  uninstall-fcitx5-ime.ps1  uninstall-fcitx5-ime.sh  validate-powershell-scripts.ps1
scripts/patches/fcitx5-lua/: 001-cmake-resolve-lua-library-mingw.patch
scripts/patches/fcitx5-rime/: 001-rimeengine-filesystem-path.patch
src/: CMakeLists.txt  main.cpp
win32/: .clang-format  CMakeLists.txt  WebPanelConfig.h  WebView2Sdk.cmake  WebViewFrontend.cmake
win32/assets/: CMakeLists.txt
win32/configui/: CMakeLists.txt  configui_main.cpp
win32/dll/: CMakeLists.txt  fcitx5-ime.rc.in  main.cpp  register.cpp  register.h  util.h
win32/ipc/: CMakeLists.txt  Fcitx5ImeIpcCodec.cpp  Fcitx5ImeIpcCodec.h  Fcitx5ImeIpcProtocol.cpp  Fcitx5ImeIpcProtocol.h  Fcitx5ImePipeServerMain.cpp  PipeImeEngine.cpp  PipeImeEngine.h
win32/trayhelper/: CMakeLists.txt  trayhelper_main.cpp
win32/tsf/: CMakeLists.txt  CandidateListUiElement.cpp  CandidateListUiElement.h  CandidateWindow.cpp  CandidateWindow.h  Compartment.cpp  CompositionSink.cpp  EditSession.cpp  Fcitx5ImeEngine.cpp  Fcitx5ImeEngine.h  Fcitx5ImePipeShared.h  ImeEngine.h  KeyEventSink.cpp  LangBarTray.cpp  LangBarTray.h  MsctfMingwCompat.cpp  MsctfMingwCompat.h  StubImeEngine.cpp  TextEditSink.cpp  TextInputProcessorEx.cpp  ThreadMgrEventSink.cpp  TrayServiceIpc.h  TsfInputContext.cpp  TsfInputContext.h  TsfStubLog.h  TsfTrace.h  Win32GnuApiCompat.h  tsf.cpp  tsf.h
